--- a/src/App.css
+++ b/src/App.css
@@ -34,10 +34,10 @@ body {
     padding: 40px;
     clip-path: circle(calc(50% - 40px));
     --_p: 100px;
-    --_g1: radial-gradient(50% 50%,#e71e24 90%,#0000); /* color 1 */
-    --_g2: radial-gradient(50% 50%,#fcc010 90%,#0000); /* color 2 */
-    --_g3: radial-gradient(50% 50%,#85c341 90%,#0000); /* color 3 */
-    --_g4: radial-gradient(50% 50%,#eb2288 90%,#0000); /* color 4 */
+    --_g1: radial-gradient(50% 50%,blue 90%,#0000); /* color 1 */
+    --_g2: radial-gradient(50% 50%,white 90%,#0000); /* color 2 */
+    --_g3: radial-gradient(50% 50%,blue 90%,#0000); /* color 3 */
+    --_g4: radial-gradient(50% 50%,white 90%,#0000); /* color 4 */
     background:
        var(--_g1) calc(20% - var(--_p)) calc(20% - var(--_p)),
        var(--_g2) calc(80% + var(--_p)) calc(10% - var(--_p)),
@@ -107,7 +107,7 @@ body {
     top: 180%;
     width: 160%;
     height: 190%;
-    background-color: #009087;
+    background-color: blue;
     border-radius: 50%;
     display: block;
     transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
@@ -116,18 +116,119 @@ body {
   
   .button2:hover {
     color: #ffffff;
-    border: 1px solid #009087;
+    border: 1px solid blue;
   }
   
   .button2:hover:before {
     top: -35%;
-    background-color: #009087;
+    background-color: blue;
     transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
   }
   
   .button2:hover:after {
     top: -45%;
-    background-color: #009087;
+    background-color: blue;
     transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
   }
   
+  /* FORMULARIO */
+
+  .orange {
+    color: #ff7a01;
+  }
+  
+  .form-container {
+    max-width: 700px;
+    margin: 30px;
+    background-color: #001925;
+    padding: 30px;
+    border-left: 5px solid #ff7a01;
+    clip-path: polygon(0 0, 100% 0, 100% calc(100% - 20px), calc(100% - 20px) 100%, 0 100%);
+  }
+  
+  .heading {
+    display: block;
+    color: white;
+    font-size: 1.5rem;
+    font-weight: 800;
+    margin-bottom: 20px;
+  }
+  
+  .form-container .form .input {
+    color: #87a4b6;
+    width: 100%;
+    background-color: #002733;
+    border: none;
+    outline: none;
+    padding: 10px;
+    margin-bottom: 20px;
+    font-weight: bold;
+    transition: all 0.2s ease-in-out;
+    border-left: 1px solid transparent;
+  }
+  
+  .form-container .form .input:focus {
+    border-left: 5px solid #ff7a01;
+  }
+  
+  .form-container .form .textarea {
+    width: 100%;
+    padding: 10px;
+    border: none;
+    outline: none;
+    background-color: #013747;
+    color: #ff7a01;
+    font-weight: bold;
+    resize: none;
+    max-height: 150px;
+    margin-bottom: 20px;
+    border-left: 1px solid transparent;
+    transition: all 0.2s ease-in-out;
+  }
+  
+  .form-container .form .textarea:focus {
+    border-left: 5px solid #ff7a01;
+  }
+  
+  .form-container .form .button-container {
+    display: flex;
+    gap: 10px;
+  }
+  
+  .form-container .form .button-container .send-button {
+    flex-basis: 70%;
+    background: #ff7a01;
+    padding: 10px;
+    color: #001925;
+    text-align: center;
+    font-weight: bold;
+    border: 1px solid transparent;
+    transition: all 0.2s ease-in-out;
+  }
+  
+  .form-container .form .button-container .send-button:hover {
+    background: transparent;
+    border: 1px solid #ff7a01;
+    color: #ff7a01;
+  }
+  
+  .form-container .form .button-container .reset-button-container {
+    filter: drop-shadow(1px 1px 0px #ff7a01);
+    flex-basis: 30%;
+  }
+  
+  .form-container .form .button-container .reset-button-container .reset-button {
+    position: relative;
+    text-align: center;
+    padding: 10px;
+    color: #ff7a01;
+    font-weight: bold;
+    background: #001925;
+    clip-path: polygon(0 0, 100% 0, 100% calc(100% - 10px), calc(100% - 10px) 100%, 0 100%);
+    transition: all 0.2s ease-in-out;
+  }
+  
+  .form-container .form .button-container .reset-button-container .reset-button:hover {
+    background: #ff7a01;
+    color: #001925;
+  }
