Alterações na secaoQuatro

--- a/src/App.css
+++ b/src/App.css
@@ -232,3 +232,19 @@ body {
     background: #ff7a01;
     color: #001925;
   }
+
+  .jogador {
+    --r: 50px; /* the radius */
+  
+  width: 450px; /* the image size */
+  aspect-ratio: 1;
+  object-fit: cover;
+  margin: calc(tan(22.5deg)*var(--r));
+  clip-path: polygon(50% 0,100% 50%,50% 100%,0 50%) margin-box;
+  --_g:/calc(2*var(--r)) calc(2*var(--r)) 
+    radial-gradient(#000 70%,#0000 72%);
+  --_s:calc(100% - (1 - tan(22.5deg))*var(--r));
+  mask:
+    conic-gradient(#000 0 0) no-repeat 50%/var(--_s) var(--_s),
+    top var(--_g) no-repeat space,left var(--_g) space no-repeat;
+  }
