--- a/src/App.css
+++ b/src/App.css
@@ -142,7 +142,7 @@ body {
     margin: 30px;
     background-color: #001925;
     padding: 30px;
-    border-left: 5px solid #ff7a01;
+    border-left: 5px solid blue;
     clip-path: polygon(0 0, 100% 0, 100% calc(100% - 20px), calc(100% - 20px) 100%, 0 100%);
   }
   
@@ -168,7 +168,7 @@ body {
   }
   
   .form-container .form .input:focus {
-    border-left: 5px solid #ff7a01;
+    border-left: 5px solid blue;
   }
   
   .form-container .form .textarea {
@@ -177,7 +177,7 @@ body {
     border: none;
     outline: none;
     background-color: #013747;
-    color: #ff7a01;
+    color: blue;
     font-weight: bold;
     resize: none;
     max-height: 150px;
@@ -187,7 +187,7 @@ body {
   }
   
   .form-container .form .textarea:focus {
-    border-left: 5px solid #ff7a01;
+    border-left: 5px solid blue;
   }
   
   .form-container .form .button-container {
@@ -197,7 +197,7 @@ body {
   
   .form-container .form .button-container .send-button {
     flex-basis: 70%;
-    background: #ff7a01;
+    background: blue;
     padding: 10px;
     color: #001925;
     text-align: center;
@@ -208,16 +208,16 @@ body {
   
   .form-container .form .button-container .send-button:hover {
     background: transparent;
-    border: 1px solid #ff7a01;
-    color: #ff7a01;
+    border: 1px solid blue;
+    color: blue;
   }
   
-  .form-container .form .button-container .reset-button-container {
+  /* .form-container .form .button-container .reset-button-container {
     filter: drop-shadow(1px 1px 0px #ff7a01);
     flex-basis: 30%;
   }
-  
-  .form-container .form .button-container .reset-button-container .reset-button {
+   */
+  /* .form-container .form .button-container .reset-button-container .reset-button {
     position: relative;
     text-align: center;
     padding: 10px;
@@ -231,7 +231,7 @@ body {
   .form-container .form .button-container .reset-button-container .reset-button:hover {
     background: #ff7a01;
     color: #001925;
-  }
+  } */
 
   .jogador {
     --r: 50px; /* the radius */
