--- a/src/App.css
+++ b/src/App.css
@@ -138,7 +138,8 @@ body {
   }
   
   .form-container {
-    max-width: 700px;
+    max-width: 1000px;
+    height: 350px;
     margin: 30px;
     background-color: #001925;
     padding: 30px;
@@ -234,54 +235,36 @@ body {
   } */
 
   .jogador {
-    --r: 50px; /* the radius */
-  
-  width: 450px; /* the image size */
-  aspect-ratio: 1;
-  object-fit: cover;
-  margin: calc(tan(22.5deg)*var(--r));
-  clip-path: polygon(50% 0,100% 50%,50% 100%,0 50%) margin-box;
-  --_g:/calc(2*var(--r)) calc(2*var(--r)) 
-    radial-gradient(#000 70%,#0000 72%);
-  --_s:calc(100% - (1 - tan(22.5deg))*var(--r));
-  mask:
-    conic-gradient(#000 0 0) no-repeat 50%/var(--_s) var(--_s),
-    top var(--_g) no-repeat space,left var(--_g) space no-repeat;
+    width: 500px;
+    height: 500px;
+    object-fit: cover;
+    --f: 1.15; /* the scale factor */
+    clip-path: inset(0);
+    transition: .4s;
   }
 
-  .container {
-    /* Basic dimensions and centering */
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  
-    /* Dark mode colors and gradient */
-    background: #121212; /* Fallback for browsers that don't support gradients */
-    background: linear-gradient(
-      135deg,
-      #121212 25%,
-      #1a1a1a 25%,
-      #1a1a1a 50%,
-      #121212 50%,
-      #121212 75%,
-      #1a1a1a 75%,
-      #1a1a1a
-    );
-    background-size: 40px 40px;
-  
-    /* Animation */
-    animation: move 4s linear infinite;
+  .jogador:hover {
+    background-size: 51% 51%;
+    clip-path: inset(calc((1 - 1/var(--f)) * 50%));
+    scale: var(--f)
   }
+
+.imgGrid {
+ 
+  width: 400px;
+  height: 500px;
+  object-fit: cover;
+  --f: 1.15; /* the scale factor */
+  clip-path: inset(0);
+  transition: .4s;
   
-  @keyframes move {
-    0% {
-      background-position: 0 0;
-    }
-    100% {
-      background-position: 40px 40px;
-    }
-  }
-  
+}
+
+.imgGrid:hover {
+  background-size: 51% 51%;
+  clip-path: inset(calc((1 - 1/var(--f)) * 50%));
+  scale: var(--f)
+}
+
+
 
